fixed text-icon alignment in success notification

--- a/src/renderer/components/Toast/Toast.scss
+++ b/src/renderer/components/Toast/Toast.scss
@@ -25,7 +25,9 @@
   }
 
   &__text {
+    align-items: center;
     color: var(--color-black);
+    display: flex;
     font-family: var(--font-family-inter-regular);
     font-weight: bold;
   }
